// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caliper event from req nav_goto 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "NavigatedTo",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "internalName": "nav:goto",
    "navType": "goto",
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://obojobo.ucf.edu/api/draft/testDraftIdReq#toReq",
  "referrer": "https://obojobo.ucf.edu/api/draft/testDraftIdReq#fromReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "type": "NavigationEvent",
}
`;

exports[`Caliper event from req question_checkAnswer 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Submitted",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://obojobo.ucf.edu/api/practice/testDraftIdReq/testQuestionIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req question_hide 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Hid",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://obojobo.ucf.edu/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req question_hideExplanation 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Hid",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://obojobo.ucf.edu/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "target": "https://obojobo.ucf.edu/api/draft/testDraftIdReq?context=explanation#testQuestionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req question_retry 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Reset",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://obojobo.ucf.edu/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "target": "https://obojobo.ucf.edu/api/practice/testDraftIdReq/testQuestionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req question_setResponse 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Completed",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "generated": Object {
    "attempt": "https://obojobo.ucf.edu/api/attempt/testAttemptIdReq",
    "extensions": Object {
      "selectedTargets": undefined,
      "targetId": undefined,
    },
    "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
    "type": "Response",
  },
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://obojobo.ucf.edu/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "target": "https:///api/draft/testDraftIdReq",
  "type": "AssessmentItemEvent",
}
`;

exports[`Caliper event from req question_showExplanation 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Viewed",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://obojobo.ucf.edu/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "target": "https://obojobo.ucf.edu/api/draft/testDraftIdReq?context=explanation#testQuestionIdReq",
  "type": "ViewEvent",
}
`;

exports[`Caliper event from req question_view 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Viewed",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://obojobo.ucf.edu/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "type": "ViewEvent",
}
`;

exports[`Caliper event from req score_clear 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Reset",
  "actor": "https://obojobo.ucf.edu/api/server",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "urn:uuid:testIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "target": "https://obojobo.ucf.edu/api/practice/testDraftIdReq/testItemIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req score_set 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Graded",
  "actor": "https://obojobo.ucf.edu/api/viewer/client",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "generated": Object {
    "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
    "attempt": "https://obojobo.ucf.edu/api/practice/testDraftIdReq/testItemIdReq",
    "dateCreated": "2016-09-22T16:57:14.500Z",
    "id": "urn:uuid:testIdReq",
    "maxScore": 100,
    "scoreGiven": "scoreReq",
    "scoredBy": "https://obojobo.ucf.edu/api/viewer/client",
    "type": "Score",
  },
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://obojobo.ucf.edu/api/practice/testDraftIdReq/testItemIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "type": "GradeEvent",
}
`;

exports[`Caliper event from req viewer_close 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "LoggedOut",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https://obojobo.ucf.edu/api/system",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "target": "https:///api/draft/testDraftIdReq",
  "type": "SessionEvent",
}
`;

exports[`Caliper event from req viewer_inactive 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Abandoned",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "inactiveDuration": "testInactiveDurationReq",
    "lastActiveTime": "testLastActiveTimeReq",
    "previewMode": false,
    "type": "inactive",
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https:///api/draft/testDraftIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req viewer_leave 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Abandoned",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
    "type": "leave",
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https:///api/draft/testDraftIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req viewer_return 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Resumed",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
    "relatedEventId": "testRelatedEventIdreq",
    "type": "return",
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https:///api/draft/testDraftIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "type": "Event",
}
`;

exports[`Caliper event from req viewer_returnFromInactive 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
  "action": "Resumed",
  "actor": "https://obojobo.ucf.edu/api/user/testUserIdReq",
  "edApp": "https://obojobo.ucf.edu/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "inactiveDuration": "testInactiveDurationReq",
    "lastActiveTime": "testLastActiveTimeReq",
    "previewMode": false,
    "relatedEventId": "testRelatedEventIdreq",
    "type": "returnFromInactive",
  },
  "federatedSession": "https://obojobo.ucf.edu/api/launch/OboLtiLaunchIdReq",
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "object": "https:///api/draft/testDraftIdReq",
  "session": "https://obojobo.ucf.edu/api/session/SessionIdReq",
  "type": "Event",
}
`;
